[package]
name = "esvg"
description = "Document object model based SVG library"
keywords = ["svg", "dom"]
version = "0.4.0"
edition = "2021"
license = "MIT"
authors = [
    "Emily Selwood",
]
readme = "README.md"
repository = "https://github.com/emilyselwood/esvg"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polygonical = "0.5"
quick-xml = "0.29"
thiserror = "1.0"
font-kit = "0.11.0"
rusttype = "0.9.3"